--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: A stylish full-width masonry grid theme.
-description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
-featured_image: /images/social.jpg
+title: Architecture
+description: Kefan's works, lives and thoughts
+featured_image: /images/icon.jpg
 ---
 
 <section class="listing">
