--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Architecture
-description: Kefan's works, lives and thoughts
+title: Projects
+description: Kefan's works
 featured_image: /images/icon.jpg
 ---
 
